# Hakush

./: README.md  pyproject.toml
hakush/: __init__.py  client.py  error.py  model.py  typedef.py
tests/: hmain.py
